<resources>
    <string name="app_name">Dearles</string>
    <string name="action_settings">Settings</string>

    <string name="password">password</string>
    <string name="username">username</string>
    <string name="age">age</string>
    <string name="email">email</string>
    <string name="description">description</string>

    <string name="login_button">LOGIN</string>
    <string name="login_password_forgotten">Forgot your password?</string>
    <string name="login_not_account">Dont have any account?</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_appname">DEAR</string>
    <string name="login_subappname">L</string>

    <string name="title_activity_sign_up1">Sign up 1/2</string>
    <string name="signup_button">Sign Up</string>
    <string name="next">Next</string>

    <string name="title_activity_sign_up2">SignUp 2/2</string>
    <string name="TipForDescription">&lt;b>Tip:&lt;/b> Use the hashtag symbol (#) for remark the most important words and be found in the search engine, Example: I am &lt;font color="#2E9AFE">#honest&lt;/font> and i love &lt;font color="#2E9AFE">#tennis&lt;/font></string>
    <string name="SignUpDescribe">Describe yourself in max 120 characters</string>
    <string name="Finish">Finish</string>
    <string name="username_required">username required</string>
    <string name="password_required">password required</string>
    <string name="email_required">email required</string>
    <string name="age_required">age required</string>
    <string name="ChooseExistingPhoto">Choose an existing photo</string>
    <string name="TakeAPhoto">Take a photo</string>
    <string name="title_activity_main">Main</string>

    <string name="LogOut">LOG OUT</string>
    <string name="title_activity_single_item_view">SingleItemView</string>
    <string name="title_activity_userbigprofile">Profile</string>
    <string name="title_activity_splash_screen">DearL</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="search_hint">search</string>
    <string name="title_activity_chat_bubble">ChatBubbleActivity</string>

</resources>
