<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login_activity"
    tools:ignore="missingPrefix"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1.0"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"

    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"

    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"

    android:background="@drawable/bglogin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_dark"
            customFont="fonts/Roboto-Black.ttf"
            android:textSize="50sp"
            android:text="@string/login_appname"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center_vertical|center_horizontal">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:hint="@string/login_mail"
                        android:textColorHint="@color/primary_dark"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/editText" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password"
                        android:textColorHint="@color/primary_dark"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/editText2" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_button"
                        android:background="@color/primary_dark"
                        android:textColor="@color/icons"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/button"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:text="@string/login_password_forgotten"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="bottom|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:text="@string/login_not_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_dark"
            android:text="@string/login_sign_up"
            android:layout_marginStart="10dp"
            android:id="@+id/textView" />
    </LinearLayout>


</LinearLayout>