<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="missingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp"
        android:background="?attr/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginBottom="7dp"
                    android:textColor="@color/primary_dark"
                    customFont="fonts/Roboto-Light.ttf"
                    android:text="@string/SignUpDescribe"/>


                <TextView
                    android:id="@+id/TipDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/primary_text"
                    customFont="fonts/Roboto-Light.ttf"/>

            </LinearLayout>


            <LinearLayout
                android:focusableInTouchMode="true"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputStyle">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="150"
                        android:maxLines="7"
                        android:hint="@string/description"
                        android:textColorHint="@color/primary_dark"
                        android:id="@+id/Description" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/Text_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:text="150"
                    android:textColor="@color/primary_dark" />

                <Button
                    android:id="@+id/Loginbtn"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:text="@string/next"
                    android:background="@color/primary_dark"
                    android:textColor="@color/icons"
                    android:textSize="15sp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>